relm-derive/tests/ui/widget-attribute/unexpected-item.stderr
error: unexpected item
 --> $DIR/unexpected-item.rs:5:5
  |
5 |     const OOPS: i32 = 1;
  |     ^^^^^
