relm-derive/tests/ui/widget-attribute/unexpected-item.rs
use relm_derive::widget;

#[widget]
impl Widget for Foo {
    const OOPS: i32 = 1;
}

fn main() {}
